cmake = import('cmake')
#curl_dep = curl.dependency('curl')
#message(curl.target_list())
#deps = [
  #dependency('threads'),
  #curl.dependency('curl')
  #curl_dep,
  #tinyxml2_dep,
  #tinyxml2.dependency('tinyxml2')
#]
mavlink_include = include_directories('third_party/mavlink/include')

subdir('core')
